# sensor_project

./: .env.example  .gitignore  .gitmodules  DEPLOYMENT_GUIDE.md  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  STRUCTURE.txt  api_server_query.py  api_server_write.py  main.py  monitor_and_recover.sh  pyproject.toml  read_sensors.py  requirements.txt  run_api.py  sensor-api-query.service  sensor-api-write.service  sensor-api.service  sensor-main.service  test_api_connection.py
api/: main.py  models.py
api/sensor_project/api/: main.py
api/sensor_project/sensors/: bme280.py  disk_space.py
docs/: ARCHITECTURE.md  SETUP.md
lib/: __init__.py  api_client.py  config.py  database.py  monitors.py  watchdog.py
lib/server/: __init__.py  models.py  query.py  writer.py
sensor_project/: requirements.txt
sensor_project/api/: models.py
sensors/: __init__.py  bme280.py  cpu_temp.py  disk_space.py
