[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-project"
version = "0.1.0"
description = "FastAPI-based sensor monitoring system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sydney Watson", email = "contact@example.com"}
]

keywords = ["sensors", "fastapi", "monitoring", "iot"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.39.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "adafruit-blinka>=8.0.0",
    "adafruit-circuitpython-bme280>=2.6.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sf27sf27/sensor_project"
Repository = "https://github.com/sf27sf27/sensor_project.git"
Issues = "https://github.com/sf27sf27/sensor_project/issues"


